// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DownloadDialog > should handle browse dialog download 1`] = `
{
  "entity": {
    "id": "HPI67YG335U72FUS626M6WYFGR5EBZTNCEJU3JA",
    "location": null,
    "partial_list": true,
    "read": false,
    "share_profile": null,
    "state": {
      "id": "download_pending",
      "str": "Download pending",
      "time_finished": 0,
    },
    "total_files": 936066,
    "total_size": 133137630299481,
    "user": {
      "cid": "HNLUODI2YZ2U7FDWMHFNJU65ERGKUN4MH7GW5LY",
      "flags": [
        "asch",
        "ccpm",
      ],
      "hub_names": "ADC hub 1 (ADC hub 3)",
      "hub_url": "adcs://hub1.adc/?kp=SHA256/H4DUKGI3U3LQHMZXU6SLQA7LF5RVD6HJFGYZBN2R5RRQ5A2RZ4ZA",
      "hub_urls": [
        "adcs://hub1.adc/?kp=SHA256/H4DUKGI3U3LQHMZXU6SLQA7LF5RVD6HJFGYZBN2R5RRQ5A2RZ4ZA",
        "adcs://hub3.adc:2482",
      ],
      "nicks": "[Hub1]User1 ([Hub3]User1)",
    },
  },
  "itemInfo": {
    "complete": true,
    "dupe": null,
    "id": 323,
    "name": "ubuntu-20.04.2.0-desktop-amd64.iso",
    "path": "/Downloads/ubuntu-20.04.2.0-desktop-amd64.iso",
    "size": 2877227008,
    "time": 1618062636,
    "tth": "2E2P2K5JP6KARHNFGUMIFENN4SGBENKLPGQNUAA",
    "type": {
      "content_type": "",
      "id": "file",
      "str": "iso",
    },
  },
  "user": {
    "cid": "HNLUODI2YZ2U7FDWMHFNJU65ERGKUN4MH7GW5LY",
    "flags": [
      "asch",
      "ccpm",
    ],
    "hub_names": "ADC hub 1 (ADC hub 3)",
    "hub_url": "adcs://hub1.adc/?kp=SHA256/H4DUKGI3U3LQHMZXU6SLQA7LF5RVD6HJFGYZBN2R5RRQ5A2RZ4ZA",
    "hub_urls": [
      "adcs://hub1.adc/?kp=SHA256/H4DUKGI3U3LQHMZXU6SLQA7LF5RVD6HJFGYZBN2R5RRQ5A2RZ4ZA",
      "adcs://hub3.adc:2482",
    ],
    "nicks": "[Hub1]User1 ([Hub3]User1)",
  },
}
`;

exports[`DownloadDialog > should handle browse dialog download 2`] = `
{
  "priority": -1,
  "target_directory": "/mnt/disk1/Images/",
  "target_name": "ubuntu-20.04.2.0-desktop-amd64.iso",
}
`;

exports[`DownloadDialog > should handle download 1`] = `
{
  "entity": {
    "id": "HPI67YG335U72FUS626M6WYFGR5EBZTNCEJU3JA",
    "location": null,
    "partial_list": true,
    "read": false,
    "share_profile": null,
    "state": {
      "id": "download_pending",
      "str": "Download pending",
      "time_finished": 0,
    },
    "total_files": 936066,
    "total_size": 133137630299481,
    "user": {
      "cid": "HNLUODI2YZ2U7FDWMHFNJU65ERGKUN4MH7GW5LY",
      "flags": [
        "asch",
        "ccpm",
      ],
      "hub_names": "ADC hub 1 (ADC hub 3)",
      "hub_url": "adcs://hub1.adc/?kp=SHA256/H4DUKGI3U3LQHMZXU6SLQA7LF5RVD6HJFGYZBN2R5RRQ5A2RZ4ZA",
      "hub_urls": [
        "adcs://hub1.adc/?kp=SHA256/H4DUKGI3U3LQHMZXU6SLQA7LF5RVD6HJFGYZBN2R5RRQ5A2RZ4ZA",
        "adcs://hub3.adc:2482",
      ],
      "nicks": "[Hub1]User1 ([Hub3]User1)",
    },
  },
  "itemInfo": {
    "complete": true,
    "dupe": null,
    "id": 323,
    "name": "ubuntu-20.04.2.0-desktop-amd64.iso",
    "path": "/Downloads/ubuntu-20.04.2.0-desktop-amd64.iso",
    "size": 2877227008,
    "time": 1618062636,
    "tth": "2E2P2K5JP6KARHNFGUMIFENN4SGBENKLPGQNUAA",
    "type": {
      "content_type": "",
      "id": "file",
      "str": "iso",
    },
  },
  "user": {
    "cid": "HNLUODI2YZ2U7FDWMHFNJU65ERGKUN4MH7GW5LY",
    "flags": [
      "asch",
      "ccpm",
    ],
    "hub_names": "ADC hub 1 (ADC hub 3)",
    "hub_url": "adcs://hub1.adc/?kp=SHA256/H4DUKGI3U3LQHMZXU6SLQA7LF5RVD6HJFGYZBN2R5RRQ5A2RZ4ZA",
    "hub_urls": [
      "adcs://hub1.adc/?kp=SHA256/H4DUKGI3U3LQHMZXU6SLQA7LF5RVD6HJFGYZBN2R5RRQ5A2RZ4ZA",
      "adcs://hub3.adc:2482",
    ],
    "nicks": "[Hub1]User1 ([Hub3]User1)",
  },
}
`;

exports[`DownloadDialog > should handle download 2`] = `
{
  "priority": -1,
  "target_directory": "/home/airdcpp/Downloads/",
  "target_name": "ubuntu-20.04.2.0-desktop-amd64.iso",
}
`;
